index utxos by asset (#168)
* add index for utxos by native asset

* fix cip14 fingerprint hash

* address reviews: add comments and use string for amount
